fix nav button overlap issue

--- a/css/style.css
+++ b/css/style.css
@@ -803,8 +803,8 @@ body {
       right: 4.5rem; } }
   @media (max-width: 37.5em) {
     .navigation__background {
-      top: 3.5rem;
-      right: 3.5rem; } }
+      top: 3rem;
+      right: 3rem; } }
 
 .navigation__nav {
   height: 100vh;
