--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -41,8 +41,8 @@
 			right: 4.5rem;
 		}
 		@include respond(phone) {
-			top: 3.5rem;
-			right: 3.5rem;
+			top: 3rem;
+			right: 3rem;
 		}
 	}
 	&__nav {
